# indoor_location_and_Navigation

./: .env.example  .gitignore  Makefile  README.md  build_env.sh  env.example  pyproject.toml
checkpoints/: Add-FloorFeature.txt  Add-FloorFeature_17.429139999999997.txt  Add-lastSeenTS.txt  AddFeature-Beacon.txt  AddFeature-floor.txt  AddFeature-onehot.txt  AddFeature-wifi_freq.txt  AddFeature_Sensor.txt  AddFeature_Sensor_1.txt  Baseline.txt  CV-GroupKFold10.txt  CV-GroupKfold5.txt  CV-GroupShuffleSplit0.2.txt  CV-StratifiedKFold.txt  Change-PReLU.txt  Change-ReLU.txt  Change-SELU.txt  Change-WifiFeature.txt  Change-WifiModel.txt  Update-WifiModelAddedSite.txt  Update-WifiModelLSTMLayer.txt  scores.txt
docs/: model_architecture.dio
notebook/: RawDataProcessing.ipynb  RawTestDataProcessing.ipynb  Untitled.ipynb  debug.ipynb  waypoint_data_processing.ipynb  wifi_bssid_label_encoding.ipynb  wifi_data_processing.ipynb
src/: config.py  create_label_map.py  dataset.py  extract_raw_data.py  model.py  models.py  preprocessing.py  split_fold.py  submission.py  temp.py  train.py  utils.py
src/lightning_logs/version_0/: events.out.tfevents.1617208732.Ruis-MBP.79156.0
src/lightning_logs/version_1/: events.out.tfevents.1617208874.Ruis-MBP.79259.0
src/lightning_logs/version_2/: events.out.tfevents.1617208934.Ruis-MBP.79377.0
src/lightning_logs/version_3/: events.out.tfevents.1617208941.Ruis-MBP.79459.0
src/lightning_logs/version_4/: events.out.tfevents.1617209031.Ruis-MBP.79563.0
src/tb_logs/wifiLSTM_buidModel/version_0/: events.out.tfevents.1617211729.Ruis-MBP.84767.0
src/utils/: feature.py
tests/: test_models.py
