[tool.poetry]
name = "indoor_location_and_navigation"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
pandas = "^1.2.3"
sklearn = "^0.0"
lightgbm = "^3.1.1"
xgboost = "^1.3.3"
torch = "^1.8.0"
jupyterlab = "^3.0.9"
rich = "^9.13.0"
scikit-learn = "^0.24.1"
tqdm = "^4.59.0"
joblib = "^1.0.1"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pycodestyle = "^2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
