[tool.poetry]
name = "indoor_location_and_navigation"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.7"
numpy = "^1.20.1"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"
torch = "^1.8.1"
pytorch-lightning = "^1.2.5"
joblib = "^1.0.1"
tqdm = "^4.59.0"
rich = "^9.13.0"
jupyterlab = "^3.0.12"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pycodestyle = "^2.7.0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
